# mockmind

./: .gitignore  README.md  package-lock.json  package.json  readme.md  vite.config.ts
.kiro/specs/interview-coding-agent/: tasks.md
src/interview-coding/: QUICK_TEST.md  TESTING_GUIDE.md  VOICE_TECHNOLOGY_EXPLAINED.md  curried-forging-pumpkin.md
src/interview-coding/frontend/: next.config.ts  package-lock.json  package.json
src/interview-coding/frontend/src/app/: layout.tsx  page.tsx
src/interview-coding/frontend/src/app/interview/[sessionId]/: page.tsx
src/interview-coding/frontend/src/components/: ChatPanel.tsx  CodeEditor.tsx  QuestionDisplay.tsx  VoiceControls.tsx
src/interview-coding/frontend/src/hooks/: useInterviewSession.ts  useVoice.ts
src/interview-coding/frontend/src/lib/: types.ts  websocket.ts
src/interview-technical/backend/: README.md  bedrock_client.py  dspy_signatures.py  main.py  minimax_client.py  pipeline.py  pyproject.toml  schemas.py  transcribe_streaming.py
src/interview-technical/frontend/: package-lock.json  package.json
src/interview-technical/frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
src/interview-technical/frontend/src/components/: AudioPlayer.tsx  InterviewPanel.tsx  InterviewUI.tsx  SpeechListener.tsx  Whiteboard.tsx
src/interview-technical/frontend/src/lib/: api.ts  payload-dispatcher.ts  state-manager.ts
src/interview-technical/scripts/: restart-dev.sh
ui/: index.html
ui/src/: App.tsx  index.css
